# rcrypt

./: Cargo.toml  README.md
src/: crypt.rs  crypto.rs  main.rs
tests/: cli.rs
